[tool.poetry]
name = "daily-briefings"
version = "0.1.0"
description = "AI-powered daily briefings dashboard with LangChain agents"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.120.4"
uvicorn = "^0.38.0"
langchain = "^1.0.3"
langgraph = "^1.0.2"
langchain-core = "^1.0.2"
python-dotenv = "^1.2.1"
pydantic = "^2.12.3"
pydantic-settings = "^2.11.0"
pytz = "^2025.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
black = "^25.9.0"
ruff = "^0.14.3"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
